# oop_exercise_06

./: CMakeLists.txt  Point.h  Rectangle.h  main.cpp  my_allocator.h  test.cpp  test2.cpp
containers/: list.h  stack.h
